Upgrade from 8 to 17 with OpenRewrite